--- a/themes/hugo-blog-awesome/layouts/partials/footer.html
+++ b/themes/hugo-blog-awesome/layouts/partials/footer.html
@@ -6,8 +6,8 @@
         {{- partial "socialIcons.html" site.Params.socialIcons -}}
     </div>
     <small class="footer_copyright">
-        © {{ now.Format "2006" }} {{ .Site.Params.author.name }}.
-        Powered by <a href="https://github.com/hugo-sid/hugo-blog-awesome" target="_blank" rel="noreferrer noopener">Hugo blog awesome</a>
+        Copyright © {{ now.Format "2006" }} 🏗️ Built by {{ .Site.Params.author.name }}
+        🔌 Powered by <a href="https://github.com/hugo-sid/hugo-blog-awesome" target="_blank" rel="noreferrer noopener">Hugo blog awesome</a>
         theme on
         <a href="https://gohugo.io" target="_blank" rel="noreferrer noopener">Hugo</a>.
     </small>
